--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ Day_04/node_modules
 Day_05/truffle/.secret
 
 Day_05/truffle/.infura
+
+Day_07/node_modules
+
+Day_07/truffle/.secret
+
+Day_07/truffle/.infura
