--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ Day_07/node_modules
 Day_07/truffle/.secret
 
 Day_07/truffle/.infura
+
+Day_09/ERC721/node_modules
+
+Day_09/ERC721/.secret
+
+Day_09/ERC721/.infura
+
+Day_09/ERC721/build
+
